--- a/components/pdk/Button/styles.module.css
+++ b/components/pdk/Button/styles.module.css
@@ -4,28 +4,28 @@
   
   box-sizing: border-box;
 
-  min-width: 48px;
-  min-height: 48px;
+  min-width: 24px;
+  min-height: 24px;
 
-  image-rendering: pixelated;
+  /* image-rendering: pixelated; */
 
-  border: 16px solid;
+  border: 8px solid;
   border-image: url("../assets/button/border-image_default.png") 16 stretch;
 }
 
 .btn:not(:disabled):active {
-  border-image: url("../assets/button/border-image_active.png") 16 / auto / 5px 3px 11px 5px stretch;
+  border-image: url("../assets/button/border-image_active.png") 16 / 1 / 2.5px 1.5px 5.5px 2.5px stretch;
 }
 
 .btnBody {
   position: relative;
   z-index: 1;
-  margin: -16px;
+  margin: -8px;
 }
 
 .btn:not(:disabled):active > .btnBody {
   position: relative;
-  top: 7px;
-  left: 7px;
+  top: 3px;
+  left: 3px;
   z-index: 100;
 }
